# app/Models/Operator.php
@@ -26,4 +26,9 @@ class Operator extends Model
     {
         return $this->belongsTo(User::class);
     }
+
+    public function vehicles()
+    {
+        return $this->hasMany(Vehicle::class);
+    }
 }
